@@ -110,7 +110,7 @@
     <section class="accept-case-wrapper" id="accept-case-wrapper">
         <div class="heading-accept-case">Accept Case <span class="accept-decline-pending-cases">#10</span></div>
         <div id="accept-case-empty">No cases pending for now.</div>
-        <div class="slider-navigation-buttons"> <div class="slider-nav-right" onclick="slide_accept_case(+1);">&#x27e8;</div><div class="slider-nav-left" onclick="slide_accept_case(-1);">&#x27e8;</div></div>
+        <div class="slider-navigation-buttons"><div class="slider-nav-right" onclick="slide_accept_case(+1);">&#x27e8;</div><div class="slider-nav-left" onclick="slide_accept_case(-1);">&#x27e8;</div></div>
         <div id="case-slider"></div>
     </section>
 </main>
