@@ -60,6 +60,8 @@
         </section>
     </nav>
 
+    
+
     <section id="bottom-action-bar">
         <button class="action-bar-btn" id="home" type="button"><img alt="home" src="/static/img/home-white.png" th:src="@{/img/home-white.png}">
         </button>
